# indidus_password_manager

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  justfile  pubspec.yaml
android/app/: build.gradle
extensions/chrome/: FEATURES.md  README.md  background.js  content.css  content.js  manifest.json  popup.css  popup.html  popup.js
integration_test/: simple_test.dart
ios/Runner.xcodeproj/: project.pbxproj
lib/: constants.dart  main.dart
lib/src/: app.dart
lib/src/auth/: authentication_service.dart  local_authentication.dart
lib/src/components/: empty_card.dart
lib/src/data/: database.dart  database_config.dart  database_type.dart  dummy_data.dart  secure_storage.dart
lib/src/enums/: entity_types.dart  financial_card.dart  identity_card.dart  logins.dart  note.dart  settings_options.dart
lib/src/localization/: app_en.arb
lib/src/models/: auth_state.dart  financial_card_model.dart  (+11 more)
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
macos/Runner/: DebugProfile.entitlements  Release.entitlements
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/crates/crudlf_core/: Cargo.toml
rust/crates/crudlf_core/src/: lib.rs
rust/crates/crudlf_derive/: Cargo.toml
rust/crates/crudlf_derive/src/: lib.rs
rust/crates/security/: Cargo.toml
rust/crates/security/src/: encryption.rs
rust/crates/sql/: Cargo.toml  justfile
rust/crates/sql/src/: error.rs  http_query.rs  lib.rs  sqlite_init.rs  sqlite_query_builder.rs
rust/crates/sqlite_backup/: Cargo.toml  README.md
rust/crates/sqlite_backup/src/: backup.rs  backup_tests.rs  compression.rs  config.rs  encryption.rs  error.rs  lib.rs  restore.rs  schedule.rs  verification.rs
rust/migrations/: 0_init.up.sql
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: simple.rs
rust/src/common/: backup_and_restore.rs  errors.rs  financial_cards.rs  identity_cards.rs  jwt.rs  jwt_key_manager.rs  logins.rs  mod.rs  notes.rs  password.rs  tags.rs  time.rs  users.rs  validation.rs
rust/src/models/: README.md  financial_cards.rs  identity_cards.rs  logins.rs  mod.rs  notes.rs  tags.rs  users.rs
rust/src/models/others/: authentication.rs  jwt_claims.rs  mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_password.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_password.podspec
rust_builder/windows/: CMakeLists.txt
server/: .gitignore  Cargo.toml
server/http_requests/: 2fa_disable.http  2fa_enable.http  2fa_verify.http  get_profile.http  login.http  put_profile.http  registration.http
server/src/: errors.rs  main.rs
server/src/handlers/: financial_cards.rs  identity_cards.rs  logins.rs  mod.rs  notes.rs  tags.rs  users.rs
server/src/middleware/: auth.rs
test/unit_test/: validators_test.dart
web/: index.html  manifest.json
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc
(+91 files in other folders)
