[package]
name = "rust_lib_password"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "rust_lib_password"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.89"
argon2 = "0.5.3"
bcrypt = "0.16.0"
chrono = { version="0.4.38", features = ["serde"] }
crudlf_derive = { version = "0.1.0", path = "./crates/crudlf_derive" }
flutter_rust_bridge = "=2.7.0"
jsonwebtoken = "9.3.0"
once_cell = "1.20.2"
rand = "0.8.5"
regex = "1.11.0"
serde = "1.0.210"
serde_json = "1.0.130"
thiserror = "2.0.7"
tokio = { version = "1.40.0", features = ["rt", "macros", "time"] }
rusqlite = "0.32.1"
security = { version = "0.1.0", path = "./crates/security" }
sql = { version = "0.1.0", path = "./crates/sql" }
uuid = "1.11.0"
ulid = "1.1.3"

[package.metadata.cargo-machete]
ignored = ["utils"]

[profile.dev]
split-debuginfo = "unpacked"

[dev-dependencies]
tempfile = "3.13.0"
