[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.9.0", features = ["rustls-0_23"] }
anyhow = "1.0.94"
dotenv = "0.15.0"
futures-util = "0.3.31"
pnet = "0.35.0"
rcgen = "0.13.1"
rust_lib_password = { path = "../rust" }
rustls = "0.23.20"
rustls-pemfile = "2.2.0"
serde_json = "1.0.133"
sql = { path = "../rust/crates/sql" }

[dev-dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
tokio = "1.42.0"
