[package]
name = "crudlf_core"
version = "0.1.0"
edition = "2021"

[dependencies]
proc-macro2 = "1.0.92"
quote = "1.0.37"
syn = { version = "2.0.77" , features= ["fold", "extra-traits", "full"]}

[dev-dependencies]
colored-diff = "0.2.3" 

[profile.dev]
split-debuginfo = "unpacked"

[profile.dev.build-override]
opt-level = 3
