[package]
name = "sql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.130"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "parking_lot"] }
ulid = "1.1.3"
rusqlite = { version = "0.32.1", features = ["bundled"] }
thiserror = "2.0.6"
once_cell = "1.20.2"
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"

[profile.dev]
split-debuginfo = "unpacked"

[profile.dev.build-override]
opt-level = 3
